Don't reset redo when doing color picking

BUG:485910